--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     </div>
                     <div class="language">
                         <figure class="language__img--wrapper">
-                            <img src="./assets/HTML 5 logo.png" alt="" class="language__img">
+                            <img src="./assets/css logo - Copy.png" alt="" class="language__img">
                         </figure>
                         <span class="language__name">CSS</span>
                     </div>
